Fixed spacing issue with cycling <li> elements

--- a/public/styles/01_styles-home/02_cycling.css
+++ b/public/styles/01_styles-home/02_cycling.css
@@ -24,11 +24,8 @@
 }
 
 .cycling-detail {
-    position: relative;
-    left: 25px;
     font-size: 1.125vw;
-    overflow: hidden;
-    margin: 0 auto;
+    margin: auto;
 }
 
 #cycling-adventures, #cycling-maintenance {
